# copytrading-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  STRATEGY_REVIEW.md
.github/workflows/: package.yml
docs/plans/: 2026-02-27-dashboard-links-and-positions.md
src/: alerts.rs  config.rs  dashboard.rs  main.rs  persistence.rs  state.rs
src/investigation/: mod.rs  scoring.rs
src/trading/: kelly.rs  mod.rs
tests/: recovery_and_breakers.rs
